fix(styles): textarea focus & scrollbar styles (#4119)

--- a/packages/styles/src/textarea.scss
+++ b/packages/styles/src/textarea.scss
@@ -7,10 +7,10 @@
 $block: #{$fd-namespace}-textarea;
 
 .#{$block} {
+  @include fd-scrollbar();
   @include fd-input-field-base();
   @include fd-input-field-states();
   @include fd-form-text();
-  @include fd-scrollbar();
 
   min-width: 6rem;
   width: 100%;
@@ -24,19 +24,17 @@ $block: #{$fd-namespace}-textarea;
   display: block;
   cursor: text;
 
+  &::-webkit-scrollbar-track,
+  &::-webkit-scrollbar-corner {
+    border-radius: 0 var(--sapField_BorderCornerRadius) var(--sapField_BorderCornerRadius) 0 !important;
+  }
+
   &[aria-expanded="false"] {
     z-index: 0;
   }
 
   @include fd-expanded() {
     z-index: 4;
-  }
-
-  @include fd-hover() {
-    &::-webkit-scrollbar-track,
-    &::-webkit-scrollbar-corner {
-      border-radius: 0 var(--fdScrollbar_Border_Radius) var(--fdScrollbar_Border_Radius) 0 !important;
-    }
   }
 
   &--compact {
